--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,21 +12,11 @@
 </head>
 
 <body>
-    <!-- ... -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <ul class="nav navbar-nav">
-                <li><a href="">Home</a></li>
-                <li><a href="/post/new">Make Post</a></li>
-                <li><a href="">About</a></li>
-            </ul>
-        </div>
-    </nav>
+    <div th:replace="~{fragments/navbar.html :: navbar}"></div>
 
     <main>
         <!-- Posts -->
